# Genesis

./: .gitignore  README.md  VISION.md  start-loop.sh  start-multi-agent-loop.sh  stop-loop.sh  stop-multi-agent-loop.sh
assistant/: ARCHITECTURE.md  config.py  pyproject.toml  requirements.txt  version.py
assistant/benchmarks/: __init__.py  __main__.py  framework.py  test_bench_chat_api.py  test_bench_memory.py  test_bench_settings.py  test_bench_tools.py  test_bench_upload.py
assistant/cli/: __init__.py  __main__.py
assistant/core/: __init__.py  capability_scanner.py  permissions.py
assistant/docs/: CALENDAR_SETUP.md  ENCRYPTION_TROUBLESHOOTING.md  MCP_SETUP.md  OLLAMA_SETUP.md  REPOSITORY_ANALYSIS.md  SECURITY.md  TELEGRAM_SETUP.md
assistant/evals/: __init__.py  __main__.py  cases.py  framework.py
assistant/memory/: .encryption_key_salt  conversations.db-shm  conversations.db-wal  facts.db-shm  facts.db-wal  proactive.db-shm  profile.db-shm  profile.db-wal
assistant/server/: __init__.py  main.py
assistant/service/: assistant-service.sh  com.genesis.assistant.plist.bak  supervisord.conf
assistant/tests/: conftest.py  test_alerts.py  test_audit_log.py  test_auth.py  test_backup.py  test_calendar.py  test_capabilities_api.py  test_capability_scanner.py  test_chat.py  test_chat_api.py  test_conversations.py  test_dark_mode.py  test_degradation.py  test_encryption.py  test_encryption_health.py  test_evals.py  test_http_integration.py  test_keyboard_shortcuts.py  test_logging_service.py  test_markdown_ui.py  test_mcp.py  test_memory_extractor.py  test_pwa.py  (+23 more)
(+247 files in other folders)
